--- a/public/js/create/create.html
+++ b/public/js/create/create.html
@@ -14,7 +14,7 @@
 
 	<div class="form-group">
 		<label>Author</label>
-		<input type="text" class="form-control" placeholder="Author" ng-model="newPost.name" required />
+		<input type="text" class="form-control" placeholder="Author" ng-model="newPost.username" required/>
 	</div>
 
 	<div class="form-group">
@@ -23,7 +23,7 @@
 	</div>
 
 	<div class="form-group">
-	<input type="submit"> <input type="button" value="Preview" ng-click="preview()">
+	<input type="submit" ng-click="submit()"> <input type="button" value="Preview" ng-click="preview()">
 	</div>
 </form>
 
