--- a/public/js/signup/signup.html
+++ b/public/js/signup/signup.html
@@ -23,6 +23,8 @@
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
 
+    {{ signup }}
+
     </div>
   </div>
 </div>
